Revision history for Crypt-Salsa20

0.02   NOT
	- Improved performance on 32-bit Perl (about 20% faster)

0.01   July 20, 2013
	- Initial release